--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "mini-css-extract-plugin": "0.11.3",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -163,10 +165,17 @@
           "libraryName": "antd",
           "style": "css"
         }
+      ],
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
       ]
     ]
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.3"
+    "babel-plugin-import": "^1.13.3",
+    "mobx-react-lite": "^3.2.0"
   }
 }
